c++: constexpr VEC_INIT_EXPR [PR118285]

cxx_eval_vec_init_1 was doing the wrong thing for an array of
self-referential class type; just evaluating the TARGET_EXPR initializer
creates a new object that refers to the TARGET_EXPR_SLOT, if we want it to
refer properly to the initialization target we need to provide it.

	PR c++/118285

gcc/cp/ChangeLog:

	* constexpr.cc (cxx_eval_vec_init_1): Build INIT_EXPR for
	initializing a class.

gcc/testsuite/ChangeLog:

	* g++.dg/cpp0x/initlist-opt7.C: New test.